# goose

./: .gitignore  .goosehints  404.html  AGENTS.md  BUILDING_LINUX.md  CONTRIBUTING.md  CONTRIBUTING_RECIPES.md  CSS_CLEANUP_PLAN.md  CSS_CLEANUP_SUMMARY.md  CSS_SIMPLIFICATION_COMPLETE.md  CSS_VARIABLE_AUDIT.md  CSS_VARIABLE_USAGE_REPORT.md  CUSTOM_DISTROS.md  Cargo.toml  FINAL_CSS_AUDIT.md  GOVERNANCE.md  Justfile  MAINTAINERS.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  REMAINING_CSS_ISSUES.md  SAFE_CSS_CLEANUP_COMPLETE.md  SHADCN_NORMALIZATION_COMPLETE.md  ai-assisted-coding-guide.md  deny.toml  download_cli.sh  flake.nix  generated.css  goose-self-test.yaml  index.html  sitemap.xml  temp_batch_fetch.txt  test_acp_client.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: hacktobefest-content-submission.yml  hacktoberfest-content-submission.yml
.github/workflows/: build-cli.yml  build-notify.yml  bundle-desktop-intel.yml  bundle-desktop-linux.yml  bundle-desktop-manual.yml  bundle-desktop-windows.yml  bundle-desktop.yml  canary.yml  cargo-audit.yml  cargo-deny.yml  check-release-pr.yaml  ci.yml  create-release-pr.yaml  deploy-docs-and-extensions.yml  docs-update-cli-ref.yml  docs-update-recipe-ref.yml  goose-issue-solver.yml  goose-pr-reviewer.yml  merge-release-pr-on-tag.yaml  minor-release.yaml  nightly.yml  patch-release.yaml  pr-comment-build-cli.yml  pr-comment-bundle-intel.yml  pr-comment-bundle-windows.yml  pr-comment-bundle.yml  pr-smoke-test.yml  pr-website-preview.yml  publish-ask-ai-bot.yml  publish-docker.yml  quarantine.yml  rebuild-skills-marketplace.yml  recipe-security-scanner.yml  release-branches.yml  release.yml  scorecard.yml  send-api-key.yml  stale.yml  test-finder.yml  update-hacktoberfest-leaderboard.yml  (+3 more)
assets/css/: styles.1d9312a0.css  styles.b8c10110.css
assets/js/: 00bbba72.b8b6bfef.js  075f0a00.aa46a8d0.js  07691c2f.5e166b47.js  07691c2f.bfba727b.js  0a45c249.2b98b6ca.js  0a45c249.69131f16.js  0a45c249.d4936d43.js  0ef0a83e.623e5914.js  0ef0a83e.bf89e9f3.js  0fa2ba1d.9732788b.js  117.c4c9a63a.js  117.e7b8aec8.js  12706580.56655945.js  12714b95.909b783d.js  1292.7a7ae46c.js  14112a1f.ece983f2.js  17153df0.2464005c.js  17153df0.6199ffeb.js  1768.5982c197.js  1768.b8f9d514.js  1842f38c.255a8b90.js  1842f38c.e44efcfc.js  1a9406fe.e393d10f.js  1bf3d0fe.e9433d7a.js  1bf6400c.efaf2879.js  1c42408f.39833100.js  1c42408f.48a77958.js  1d2bec02.af2821d9.js  1e0b7cd9.a85f7b9e.js  2022.84d53e8c.js  2022.9b215a89.js  207da13e.d05b6581.js  2244.2336abcf.js  2244.2facfae9.js  23c2c20d.0ba90be4.js  23c2c20d.5c333f75.js  23c2c20d.804c0847.js  247272c2.d92c2eee.js  2498.386166be.js  2498.64e3223d.js  (+192 more)
blog/: atom.xml  index.html  rss.xml
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
clippy-baselines/: too_many_lines.txt
community/: index.html
crates/goose/: Cargo.toml
crates/goose-acp/: Cargo.toml
crates/goose-acp/src/: http.rs  lib.rs  server.rs  server_factory.rs
crates/goose-acp/src/transport/: http.rs  websocket.rs
crates/goose-acp/tests/: common.rs  server_test.rs
crates/goose-acp/tests/common_tests/: mod.rs
crates/goose-acp/tests/fixtures/: mod.rs  server.rs
crates/goose-acp/tests/test_data/: openai_builtin_execute.txt  openai_builtin_final.txt  openai_builtin_search.txt
crates/goose-bench/: Cargo.toml
crates/goose-cli/: Cargo.toml
crates/goose-mcp/: .gooseignore  Cargo.toml
crates/goose-mcp/src/: lib.rs  mcp_server_runner.rs
crates/goose-mcp/src/autovisualiser/: mod.rs
crates/goose-mcp/src/autovisualiser/templates/: mermaid_template.html
crates/goose-mcp/src/computercontroller/: mod.rs
crates/goose-mcp/src/computercontroller/platform/: mod.rs  windows.rs
crates/goose-mcp/src/developer/: mod.rs  paths.rs  rmcp_developer.rs  shell.rs  text_editor.rs
crates/goose-mcp/src/developer/analyze/: cache.rs  formatter.rs  graph.rs  mod.rs  parser.rs  types.rs
crates/goose-mcp/src/developer/analyze/languages/: go.rs  kotlin.rs  mod.rs  ruby.rs  rust.rs  swift.rs
crates/goose-mcp/src/developer/analyze/tests/: cache_tests.rs  go_test.rs  graph_tests.rs  integration_tests.rs  large_output_tests.rs  mod.rs  parser_tests.rs  ruby_test.rs  rust_test.rs  traversal_tests.rs
crates/goose-mcp/src/developer/editor_models/: morphllm_editor.rs
crates/goose-mcp/src/developer/tests/: test_diff.rs
crates/goose-mcp/src/memory/: mod.rs
crates/goose-mcp/src/tutorial/: mod.rs
crates/goose-server/: Cargo.toml
deeplink-generator/: index.html
docs/: quickstart.md
docs/experimental/: index.html  index.md  ollama.md  vs-code-extension.md
docs/getting-started/: providers.md  using-extensions.md
docs/goose-architecture/: index.html
docs/guides/: acp-clients.md  cli-providers.md  config-files.md  environment-variables.md  goose-cli-commands.md  logs.md  running-tasks.md  tips.md
docs/mcp/: chatrecall-mcp.md  chrome-devtools-mcp.md  skills-mcp.md
docs/quickstart/: index.html
docs/troubleshooting/: index.html
docs/tutorials/: custom-extensions.md  recipes-tutorial.md
documentation/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json
documentation/blog/: authors.yml
documentation/docs/: quickstart.md  troubleshooting.md
documentation/plugins/: custom-webpack.cjs  markdown-export.cjs
documentation/scripts/: community_stars.py  community_stars_teams.txt  generate-docs-map.js
documentation/static/: servers.json
evals/open-model-gym/: agent-gym-report-2026-02-03.html  config.yaml
extension/: index.html
extensions/: index.html
extensions/detail/: index.html
grants/: index.html
markdown-page/: index.html
prompt-library/: index.html
prompt-library/detail/: index.html
prompt-library/types/: index.html
recipe-generator/: index.html
recipe-scanner/: base_recipe.yaml
recipes/: index.html
scripts/: clippy-baseline.sh  clippy-lint.sh  diagnostics-viewer.py  test_compaction.sh  test_mcp.sh  test_providers.sh  test_providers_code_exec.sh  test_providers_lib.sh  test_subrecipes.sh
(+1033 files in other folders)
