[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.19.0"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "Apache-2.0"
repository = "https://github.com/block/goose"
description = "An AI agent"

[workspace.lints.clippy]
uninlined_format_args = "allow"
string_slice = "warn"

[workspace.dependencies]
rmcp = { version = "0.12.0", features = ["schemars", "auth"] }
sacp = "10.0.0"
webbrowser = "1.0"
which = "8.0.0"
etcetera = "0.11.0"
ignore = "0.4.25"
crunchy = "0.2.4"
