[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.21.0"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "Apache-2.0"
repository = "https://github.com/block/goose"
description = "An AI agent"

[workspace.lints.clippy]
uninlined_format_args = "allow"
string_slice = "warn"

[workspace.dependencies]
rmcp = { version = "0.13.0", features = ["schemars", "auth"] }
anyhow = "1.0"
futures = "0.3"
regex = "1.12"
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
webbrowser = "1.0"
which = "8.0.0"
etcetera = "0.11.0"
ignore = "0.4.25"
crunchy = "0.2.4"
env-lock = "1.0.1"
wiremock = "0.6"
serial_test = "3.2.0"
test-case = "3.3.1"
base64 = "0.22.1"
reqwest = { version = "0.12.28", default-features = false }
tower = "0.5.2"
tower-http = "0.6.8"
url = "2.5.8"
