[package]
name = "goose-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
rmcp = { workspace = true, features = ["server", "client", "transport-io", "macros"] }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = { workspace = true }
base64 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
schemars = "1.0"
shellexpand = "3.1.0"
indoc = "2.0.5"
xcap = "=0.4.0"
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots", "system-proxy"], default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
etcetera = { workspace = true }
tempfile = "3.8"
include_dir = "0.7.4"
regex = { workspace = true }
once_cell = "1.20.2"
ignore = { workspace = true }
lopdf = "0.36.0"
docx-rs = "0.4.7"
image = { version = "0.24.9", features = ["jpeg"] }
umya-spreadsheet = "2.2.3"
which = {workspace = true}
lru = "0.16"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-ruby = "0.23"
rayon = "1.10"
libc = "0.2"
# TODO: Fork mpatch or replace with a custom implementation using `similar` crate
# for fuzzy patch matching. Current crate has limited maintenance (single maintainer,
# ~1000 downloads). Pinned to exact version to prevent supply chain attacks.
mpatch = "=0.2.0"
tokio-util = "0.7.16"

[dev-dependencies]
serial_test = { workspace = true }

[features]
